change image alignment

--- a/layout/header.html
+++ b/layout/header.html
@@ -2,4 +2,29 @@
     <h1>Bucephalus Studios</h1>
     <br/>
     <!-- Navbar -->
+    <nav>
+        <div class="navbarItem">
+            Home
+        </div>
+        <div class="navbarItem">
+            About
+        </div>
+        <div class="navbarItem">
+            Contact
+        </div>
+        <div class="navbarItem">
+            Games
+        </div>
+        <div class="navbarItem">
+            Software
+        </div>
+        <!--
+        <div class="navbarItem">
+            Shop
+        </div>
+        <div class="navbarItem">
+            Donate
+        </div>
+        -->
+    </nav>
 </div>
