added styles, trying to get header nav looking nice

--- a/layout/header.html
+++ b/layout/header.html
@@ -2,7 +2,7 @@
     <h1>Bucephalus Studios</h1>
     <br/>
     <!-- Navbar -->
-    <nav>
+    <nav class="navbar">
         <div class="navbarItem">
             Home
         </div>
