changing organization of navbar items

--- a/layout/header.html
+++ b/layout/header.html
@@ -2,20 +2,20 @@
     <h1>Bucephalus Studios</h1>
     <br/>
     <!-- Navbar -->
-    <nav class="navbar">
-        <div class="navbarItem">
+    <nav class="row g-0">
+        <div class="col-1">
             Home
         </div>
-        <div class="navbarItem">
+        <div class="col-1">
             About
         </div>
-        <div class="navbarItem">
+        <div class="col-1">
             Games
         </div>
-        <div class="navbarItem">
+        <div class="col-1">
             Software
         </div>
-        <div class="navbarItem">
+        <div class="col-1">
             Contact
         </div>
         <!--
