testing nav out

--- a/layout/header.html
+++ b/layout/header.html
@@ -2,22 +2,22 @@
     <h1>Bucephalus Studios</h1>
     <br/>
     <!-- Navbar -->
-    <nav class="row g-0">
-        <div class="col-1">
+    <ul class="siteNav">
+        <li class="siteNavItem">
             Home
-        </div>
-        <div class="col-1">
+        </li>
+        <li class="siteNavItem">
             About
-        </div>
-        <div class="col-1">
+        </li>
+        <li class="siteNavItem">
             Games
-        </div>
-        <div class="col-1">
+        </li>
+        <li class="siteNavItem">
             Software
-        </div>
-        <div class="col-1">
+        </li>
+        <li class="siteNavItem">
             Contact
-        </div>
+        </li>
         <!--
         <div class="navbarItem">
             Shop
@@ -26,5 +26,5 @@
             Donate
         </div>
         -->
-    </nav>
+    </ul>
 </div>
