--- a/assets/style.css
+++ b/assets/style.css
@@ -4,11 +4,11 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
 }
 
 .siteNavItem 
 {
     float : left;
     display: inline;
+    padding: 20px;
 }
