--- a/layout/header.html
+++ b/layout/header.html
@@ -4,19 +4,29 @@
     <!-- Navbar -->
     <ul class="siteNav">
         <li class="siteNavItem">
-            Home
+            <a href="index.html">
+                Home
+            </a>
         </li>
         <li class="siteNavItem">
-            About
+            <a href="about.html">
+                About
+            </a>
         </li>
         <li class="siteNavItem">
-            Games
+            <a href="games.html">
+                Games
+            </a>
         </li>
         <li class="siteNavItem">
-            Software
+            <a href="software.html">
+                Software
+            </a>
         </li>
         <li class="siteNavItem">
-            Contact
+            <a href="contact.html">
+                Contact
+            </a>
         </li>
         <!--
         <div class="navbarItem">
