coloring text for fun

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,18 @@
 }
 
 
+.consoleMagenta
+{
+    color :  #AA00AA;
+}
+
+
+.consoleRed
+{
+    color : #AA0000;
+}
+
+
 body
 {
     font-family: Ubuntu Mono;
