adding avatar to header

--- a/layout/header.html
+++ b/layout/header.html
@@ -1,5 +1,5 @@
 <div id="header">
-    <img>
+    <img src="assets/bucephalus_avatar.png">
     <h1>Bucephalus Studios</h1>
     <br/>
     <!-- Navbar -->
