--- a/layout/header.html
+++ b/layout/header.html
@@ -1,6 +1,8 @@
 <div id="header">
-    <img src="assets/bucephalus_avatar.png">
-    <h1>Bucephalus Studios</h1>
+    <div class="d-flex align-items-center">
+        <img src="assets/bucephalus_avatar.png" height="80px" width="80px" style="margin-right : 20px;">
+        <h1>Bucephalus Studios</h1>
+    </div>
     <br/>
     <!-- Navbar -->
     <ul class="siteNav">
