second logo formatting correction

--- a/layout/header.html
+++ b/layout/header.html
@@ -1,6 +1,6 @@
 <div id="header">
     <div class="d-flex align-items-center">
-        <img src="assets/bucephalus_avatar.png" height="80px" width="80px" style="margin-right : 20px;">
+        <img src="assets/bucephalus_avatar.png" height="100px" width="100px" style="margin : 20px;">
         <h1>Bucephalus Studios</h1>
     </div>
     <br/>
