--- a/layout/header.html
+++ b/layout/header.html
@@ -1,6 +1,8 @@
 <div id="header">
     <div class="d-flex align-items-center">
-        <img src="assets/bucephalus_avatar.png" height="120px" width="120px" style="margin : 20px;">
+        <a href="https://bucephalusstudios.com/">
+            <img src="assets/bucephalus_avatar.png" height="120px" width="120px" style="margin : 20px;">
+        </a>
         <h1>Bucephalus Studios</h1>
     </div>
     <!-- Navbar -->
@@ -34,9 +36,73 @@
         <div class="navbarItem">
             Shop
         </div>
-        <div class="navbarItem">
-            Donate
-        </div>
         -->
+        <li class="siteNavSubscribe">
+            <button id="email-list-signup-form-open-btn" class="standardButton btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+                Subscribe to our newsletter
+            </button>
+        </li>
+        <li class="siteNavLinktree">
+            <a href="https://linktr.ee/bucephalus_studios">
+                <button class="linktreeButton btn">
+                    Linktree
+                </button>
+            </a>
+        </li>
     </ul>
+</div>
+<div>
+    <div class="modal fade" id="email-sign-up-modal" style="display: none;" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"></h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+               <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
+                <div id="mc_embed_shell">
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://itch.us21.list-manage.com/subscribe/post?u=7c42aee1abcb8f5e88af6fe06&amp;id=4a251f5c49&amp;f_id=0067e6e6f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                            target="_blank">
+                            <div id="mc_embed_signup_scroll">
+                                <h2>Subscribe to updates from Bucephalus Studios</h2>
+                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
+                                            class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
+                                        id="mce-EMAIL" required="" value=""><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                                </div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                    /* real people should not fill this in and expect good things - do not remove this or risk form bot
+                                    signups */
+                                    <input type="text" name="b_7c42aee1abcb8f5e88af6fe06_4a251f5c49" tabindex="-1" value="">
+                                </div>
+                                <div class="optionalParent">
+                                    <div class="clear foot">
+                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn standardButton"
+                                            value="Subscribe">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                    <script
+                        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Close
+                </button>
+            </div>
+        </div>
+        </div>
+    </div>
 </div>
