--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
     background-color: #555555;
 }
 
-.siteNavItem 
+.siteNavLeft
 {
     font-family: Ubuntu Mono;
     font-size: large;
@@ -17,7 +17,7 @@
     color : #c2c2c2;
 }
 
-.siteNavItem a
+.siteNavLeft a
 {
     display: block;
     color: #c2c2c2;
@@ -27,7 +27,7 @@
     transition: 0.6s;
 }
 
-.siteNavItem a:hover
+.siteNavLeft a:hover
 {
     color : #ffffff;
     background-color: #ca6500;
@@ -35,18 +35,17 @@
 }
 
 
-.siteNavSubscribe
+.siteNavRight
 {
     font-family: Ubuntu Mono;
     font-size: large;
-    float : left;
+    float : right;
     display: inline;
     background: #555555;
     color : #c2c2c2;
 }
 
-
-.standardButton
+.subscribeButton
 {
     border: 0px;
     border-radius: 5px;
@@ -57,10 +56,29 @@
 }
 
 
-.standardButton:hover
+.subscribeButton:hover
 {
     color : #ffffff;
-    background-color: #ff5555;
+    filter: drop-shadow(0 0 0.75rem crimson);
+    transition : 0.6s;
+}
+
+
+.linktreeButton
+{
+    border: 0px;
+    border-radius: 5px;
+    padding : 10px;
+    color : #ffffff;
+    background-color: #00AAAA;
+    transition : 0.6s;
+}
+
+
+.linktreeButton:hover
+{
+    color : #ffffff;
+    filter: drop-shadow(0 0 0.75rem turquoise);
     transition : 0.6s;
 }
 
