--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+#logoImage
+{
+}
+
+#logoImage:hover
+{
+    filter: drop-shadow(0 0 0.75rem #AA5500);
+}
+
 .siteNav
 {
     list-style-type: none;
