--- a/layout/header.html
+++ b/layout/header.html
@@ -1,7 +1,7 @@
 <div id="header">
     <div class="d-flex align-items-center">
         <a href="https://bucephalusstudios.com/">
-            <img src="assets/bucephalus_avatar.png" height="120px" width="120px" style="margin : 20px;">
+            <img src="assets/bucephalus_avatar.png" height="120px" width="120px" style="margin : 20px;" id="logoImage">
         </a>
         <h1>Bucephalus Studios</h1>
     </div>
@@ -38,6 +38,7 @@
         </div>
         -->
         <li class="siteNavRight">
+            <!-- Left off here: Apply glow to button, not just text on button -->
             <button id="email-list-signup-form-open-btn" class="subscribeButton btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
