--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,31 @@
 #logoImage:hover
 {
     filter: drop-shadow(0 0 0.75rem #AA5500);
+    transition: 0.6s;
 }
+
+.glowCrimsonOnHover
+{
+}
+
+.glowCrimsonOnHover:hover
+{
+    filter: drop-shadow(0 0 0.75rem crimson);
+    transition: 0.6s;
+}
+
+
+.glowTurqoiseOnHover
+{
+}
+
+
+.glowTurqoiseOnHover:hover
+{
+    filter: drop-shadow(0 0 0.75rem turquoise);
+    transition: 0.6s;
+}
+
 
 .siteNav
 {
@@ -65,14 +89,6 @@
 }
 
 
-.subscribeButton:hover
-{
-    color : #ffffff;
-    filter: drop-shadow(0 0 0.75rem crimson);
-    transition : 0.6s;
-}
-
-
 .linktreeButton
 {
     border: 0px;
@@ -80,14 +96,6 @@
     padding : 10px;
     color : #ffffff;
     background-color: #00AAAA;
-    transition : 0.6s;
-}
-
-
-.linktreeButton:hover
-{
-    color : #ffffff;
-    filter: drop-shadow(0 0 0.75rem turquoise);
     transition : 0.6s;
 }
 
