--- a/layout/header.html
+++ b/layout/header.html
@@ -37,13 +37,13 @@
             Shop
         </div>
         -->
-        <li class="siteNavRight">
+        <li class="siteNavRight glowCrimsonOnHover">
             <!-- Left off here: Apply glow to button, not just text on button -->
             <button id="email-list-signup-form-open-btn" class="subscribeButton btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
         </li>
-        <li class="siteNavRight">
+        <li class="siteNavRight glowTurqoiseOnHover">
             <a href="https://linktr.ee/bucephalus_studios">
                 <button class="linktreeButton btn">
                     Check out our links
