--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,7 @@
     display: inline;
     background: #555555;
     color : #c2c2c2;
+    padding : 14px 16px;
 }
 
 .subscribeButton
@@ -103,7 +104,6 @@
     padding : 10px;
     color : #ffffff;
     background-color: #00AAAA;
-    transition : 0.6s;
 }
 
 
