adjusting header buttons 2

--- a/layout/header.html
+++ b/layout/header.html
@@ -37,14 +37,14 @@
             Shop
         </div>
         -->
-        <li class="siteNavRight glowCrimsonOnHover">
-            <button id="email-list-signup-form-open-btn" class="subscribeButton btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+        <li class="siteNavRight">
+            <button id="email-list-signup-form-open-btn" class="subscribeButton btn glowCrimsonOnHover" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
         </li>
-        <li class="siteNavRight glowTurqoiseOnHover">
+        <li class="siteNavRight">
             <a href="https://linktr.ee/bucephalus_studios">
-                <button class="linktreeButton btn">
+                <button class="linktreeButton btn glowTurqoiseOnHover">
                     Check out our links
                 </button>
             </a>
