edits to header styles

--- a/layout/header.html
+++ b/layout/header.html
@@ -32,21 +32,24 @@
                 Contact
             </a>
         </li>
+        <li class="siteNaveLeft">
+            <a href="https://linktr.ee/bucephalus_studios">
+                Links
+            </a>
+        </li>
         <!--
         <div class="siteNavItem">
             Shop
         </div>
         -->
-        <li class="siteNavRight">
-            <button id="email-list-signup-form-open-btn" class="subscribeButton btn glowCrimsonOnHover" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+        <li class="siteNavRight redNavBarLink">
+            <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
         </li>
-        <li class="siteNavRight">
-            <a href="https://linktr.ee/bucephalus_studios">
-                <button class="linktreeButton btn glowTurqoiseOnHover">
-                    Check out our links
-                </button>
+        <li class="siteNavRight greenNavBarLink">
+            <a href="https://ko-fi.com/bucephalus_studios">
+                Support us
             </a>
         </li>
     </ul>
