--- a/assets/style.css
+++ b/assets/style.css
@@ -86,6 +86,24 @@
     padding : 14px 16px;
 }
 
+
+.siteNavRight a
+{
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.6s;
+}
+
+
+.siteNavRight a:hover
+{
+    color : #ffffff;
+    transition: 0.6s;
+}
+
+
 .subscribeButton
 {
     border: 0px;
