adding linktree link to navbar left

--- a/assets/style.css
+++ b/assets/style.css
@@ -115,13 +115,15 @@
 }
 
 
-.linktreeButton
+.linktreeLink
 {
-    border: 0px;
-    border-radius: 5px;
-    padding : 10px;
-    color : #ffffff;
     background-color: #00AAAA;
+}
+
+
+.linktreeLink:hover
+{
+    background-color: turquoise;
 }
 
 
