--- a/layout/header.html
+++ b/layout/header.html
@@ -32,7 +32,7 @@
                 Contact
             </a>
         </li>
-        <li class="siteNaveLeft">
+        <li class="siteNavLeft linktreeLInk">
             <a href="https://linktr.ee/bucephalus_studios">
                 Links
             </a>
