--- a/layout/header.html
+++ b/layout/header.html
@@ -32,8 +32,8 @@
                 Contact
             </a>
         </li>
-        <li class="siteNavLeft linktreeLInk">
-            <a href="https://linktr.ee/bucephalus_studios">
+        <li class="siteNavLeft linktreeLink">
+            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
                 Links
             </a>
         </li>
