change header layout

--- a/layout/header.html
+++ b/layout/header.html
@@ -32,17 +32,18 @@
                 Contact
             </a>
         </li>
-        <li class="siteNavLeft linktreeLink">
-            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
-                Links
-            </a>
-        </li>
+        
         <!--
         <div class="siteNavItem">
             Shop
         </div>
         -->
-        <li class="siteNavRight redNavBarLink">
+        <li class="siteNavRight">
+            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
+                Links
+            </a>
+        </li>
+        <li class="siteNavRight">
             <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
