added kofi button

--- a/layout/header.html
+++ b/layout/header.html
@@ -38,20 +38,20 @@
             Shop
         </div>
         -->
-        <li class="siteNavRight">
+        <li id="" class="siteNavRight">
             <a href="https://linktr.ee/bucephalus_studios" target="_blank">
                 Links
+            </a>
+        </li>
+        <li class="siteNavRight">
+            <a href="https://ko-fi.com/bucephalus_studios">
+                <img src="assets/kofi_button_blue">
             </a>
         </li>
         <li class="siteNavRight">
             <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
-        </li>
-        <li class="siteNavRight greenNavBarLink">
-            <a href="https://ko-fi.com/bucephalus_studios">
-                Support us
-            </a>
         </li>
     </ul>
     <div>
