--- a/layout/header.html
+++ b/layout/header.html
@@ -45,7 +45,7 @@
         </li>
         <li class="siteNavRight">
             <a href="https://ko-fi.com/bucephalus_studios">
-                <img src="assets/kofi_button_blue">
+                <img src="assets/kofi_button_blue.png">
             </a>
         </li>
         <li class="siteNavRight">
