--- a/layout/header.html
+++ b/layout/header.html
@@ -38,14 +38,14 @@
             Shop
         </div>
         -->
-        <li id="" class="siteNavRight">
+        <li id="linktreeLink" class="siteNavRight">
             <a href="https://linktr.ee/bucephalus_studios" target="_blank">
                 Links
             </a>
         </li>
-        <li class="siteNavRight">
+        <li id="kofiLink" class="siteNavRight">
             <a href="https://ko-fi.com/bucephalus_studios">
-                <img src="assets/kofi_button_blue.png">
+                <img src="assets/kofi_button_blue.png" width="250px" height="42px">
             </a>
         </li>
         <li class="siteNavRight">
