--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@
 .siteNavLeft
 {
     font-family: Ubuntu Mono;
-    font-size: 1.5em;
+    font-size: 18px;
     float : left;
     display: inline;
     background: #555555;
@@ -78,7 +78,7 @@
 .siteNavRight
 {
     font-family: Ubuntu Mono;
-    font-size: 1.5em;
+    font-size: 18px;
     float : right;
     display: inline;
 }
