--- a/layout/header.html
+++ b/layout/header.html
@@ -43,8 +43,8 @@
                 Links
             </a>
         </li>
-        <li id="kofiLink" class="siteNavRight" style="padding: 0px; margin: 14px 16px;">
-            <a href="https://ko-fi.com/bucephalus_studios">
+        <li id="kofiLink" class="siteNavRight">
+            <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
                 <img src="assets/kofi_button_blue.png" width="250px" height="42px">
             </a>
         </li>
