--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@
     display: block;
     color: #c2c2c2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 18px;
     text-decoration: none;
     transition: 0.6s;
 }
@@ -88,7 +88,7 @@
 {
     display: block;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 18px;
     text-decoration: none;
     transition: 0.6s;
 }
@@ -195,7 +195,7 @@
 body
 {
     font-family: Ubuntu Mono;
-    font-size: 1em;
+    font-size: 16px;
     background-color: #191413;
     color: #c2c2c2;
 }
