changed styles for links button

--- a/layout/header.html
+++ b/layout/header.html
@@ -38,20 +38,20 @@
             Shop
         </div>
         -->
-        <li id="linktreeLink" class="siteNavRight">
-            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
-                Links
-            </a>
-        </li>
-        <li id="kofiLink" class="siteNavRight">
-            <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
-                <img src="assets/kofi_button_blue.png" width="250px" height="42px">
-            </a>
-        </li>
         <li class="siteNavRight">
             <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                 Subscribe to our newsletter
             </button>
+        </li>
+        <li id="kofiLink" class="siteNavRight" target="_blank">
+            <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
+                <img src="assets/kofi_button_blue.png" width="250px" height="42px">
+            </a>
+        </li>
+        <li id="linktreeLink" class="siteNavRight">
+            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
+                Links
+            </a>
         </li>
     </ul>
     <div>
