--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@
     display: block;
     color: #c2c2c2;
     text-align: center;
-    padding: 17px 15px;
+    padding: 17px 17px;
     text-decoration: none;
     transition: 0.6s;
 }
@@ -88,7 +88,7 @@
 {
     display: block;
     text-align: center;
-    padding: 17px 15px;
+    padding: 17px 17px;
     text-decoration: none;
     transition: 0.6s;
 }
@@ -112,13 +112,13 @@
 }
 
 
-.linktreeLink
+.linktreeLink a
 {
     background-color: #00AAAA;
 }
 
 
-.linktreeLink:hover
+.linktreeLink a:hover
 {
     background-color: turquoise;
 }
@@ -195,7 +195,7 @@
 body
 {
     font-family: Ubuntu Mono;
-    font-size: 16px;
+    font-size: 18px;
     background-color: #191413;
     color: #c2c2c2;
 }
