subscribe button adjustment

--- a/layout/header.html
+++ b/layout/header.html
@@ -28,30 +28,29 @@
             </a>
         </li>
         <li class="siteNavLeft">
+            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
+                Links
+            </a>
+        </li>
+        <li class="siteNavLeft">
             <a href="contact.html">
                 Contact
             </a>
         </li>
-        
         <!--
         <div class="siteNavItem">
             Shop
         </div>
         -->
-        <li class="siteNavRight">
-            <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
-                Subscribe to our newsletter
-            </button>
-        </li>
         <li id="kofiLink" class="siteNavRight" target="_blank">
             <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
                 <img src="assets/kofi_button_blue.png" width="250px" height="42px">
             </a>
         </li>
-        <li id="linktreeLink" class="siteNavRight">
-            <a href="https://linktr.ee/bucephalus_studios" target="_blank">
-                Links
-            </a>
+        <li class="siteNavRight">
+            <button id="email-list-signup-form-open-btn" class="subscribeButton" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+                Subscribe to our newsletter
+            </button>
         </li>
     </ul>
     <div>
