--- a/layout/header.html
+++ b/layout/header.html
@@ -44,11 +44,12 @@
         -->
         <li id="kofiLink" class="siteNavRight" target="_blank">
             <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
-                <img src="assets/kofi_button_blue.png" width="250px" height="42px">
+                <img src="assets/kofi_button_blue.png" width="250px" height="42px" class="glowCyanOnHover">
             </a>
         </li>
         <li class="siteNavRight">
-            <button id="email-list-signup-form-open-btn" class="subscribeButton" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+            <button id="email-list-signup-form-open-btn" class="subscribeButton" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal"
+                    style="margin: 14px 16px;">
                 Subscribe to our newsletter
             </button>
         </li>
