--- a/assets/style.css
+++ b/assets/style.css
@@ -101,11 +101,13 @@
 
 .subscribeButton
 {
+    height: 42px;
     border: 0px;
-    border-radius: 5px;
+    border-radius: 10px;
     padding : 10px;
+    font-size : 16px;
     color : #ffffff;
-    background-color: #a00;
+    background-color: linear-gradient(to right,  #FF5555, #AA0000);
     transition : 0.6s;
 }
 
