--- a/assets/style.css
+++ b/assets/style.css
@@ -114,8 +114,8 @@
 
 .subscribeButton:hover
 {
-    box-shadow: 0 0 8px #AA0000;
-    transition: 0.6s; 
+    filter: drop-shadow(0 0 0.75rem crimson);
+    transition: 0.6s;
 }
 
 
