--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,7 @@
     border-radius: 7px;
     padding : 10px;
     font-size : 16px;
+    font-weight : bold;
     color : #ffffff;
     background: linear-gradient(to right,  #FF5555, #AA0000);
     transition : 0.6s;
