--- a/assets/style.css
+++ b/assets/style.css
@@ -187,9 +187,8 @@
 
 .gameCardContent
 {
-    width : 90%;
-    padding-top : 10px;
-    padding-bottom : 10px;
+    width : 100%;
+    padding : 14px;
 }
 
 
