--- a/layout/header.html
+++ b/layout/header.html
@@ -42,8 +42,8 @@
             Shop
         </div>
         -->
-        <li id="kofiLink" class="siteNavRight" target="_blank">
-            <a href="https://ko-fi.com/bucephalus_studios" style="padding: 0px; margin: 14px 16px;">
+        <li id="kofiLink" class="siteNavRight">
+            <a href="https://ko-fi.com/bucephalus_studios" target="_blank" style="padding: 0px; margin: 14px 16px;">
                 <img src="assets/kofi_button_blue.png" width="250px" height="42px" class="glowCyanOnHover">
             </a>
         </li>
