--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@
 {
     height: 42px;
     border: 0px;
-    border-radius: 7px;
+    border-radius: 5px;
     padding : 10px;
     font-size : 16px;
     font-weight : bold;
@@ -116,6 +116,27 @@
 .subscribeButton:hover
 {
     filter: drop-shadow(0 0 0.75rem crimson);
+    transition: 0.6s;
+}
+
+
+.kofiButton
+{
+    height: 42px;
+    border: 0px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight : bold;
+    color: #ffffff;
+    background: linear-gradient(to right, turquoise, #00AAAA);
+    transition: 0.6s;
+}
+
+
+.kofiButton:hover
+{
+    filter: drop-shadow(0 0 0 0.65rem cyan);
     transition: 0.6s;
 }
 
