--- a/layout/header.html
+++ b/layout/header.html
@@ -44,7 +44,10 @@
         -->
         <li id="kofiLink" class="siteNavRight">
             <a href="https://ko-fi.com/bucephalus_studios" target="_blank" style="padding: 0px; margin: 14px 16px;">
-                <img src="assets/kofi_button_blue.png" width="250px" height="42px" class="glowCyanOnHover">
+                <button id="kofiButton">
+                    <img src="assets/kofi_s_logo_nolabel.png" width="24px" height="24px">
+                    Support us on Kofi
+                </button>
             </a>
         </li>
         <li class="siteNavRight">
