resized kofi logo

--- a/layout/header.html
+++ b/layout/header.html
@@ -44,8 +44,8 @@
         -->
         <li id="kofiLink" class="siteNavRight">
             <a href="https://ko-fi.com/bucephalus_studios" target="_blank" style="padding: 0px; margin: 14px 16px;">
-                <button id="kofiButton">
-                    <img src="assets/kofi_s_logo_nolabel.png" width="24px" height="24px">
+                <button class="kofiButton">
+                    <img src="assets/kofi_s_logo_nolabel.png" width="36px" height="36px">
                     Support us on Kofi
                 </button>
             </a>
