--- a/assets/style.css
+++ b/assets/style.css
@@ -129,7 +129,7 @@
     font-size: 16px;
     font-weight : bold;
     color: #ffffff;
-    background: linear-gradient(to right, turquoise, #00AAAA);
+    background: linear-gradient(to right, #00AAAA, #0000AA );
     transition: 0.6s;
 }
 
