--- a/layout/header.html
+++ b/layout/header.html
@@ -44,8 +44,8 @@
         -->
         <li id="kofiLink" class="siteNavRight">
             <a href="https://ko-fi.com/bucephalus_studios" target="_blank" style="padding: 0px; margin: 14px 16px;">
-                <button class="kofiButton" style="position:absolute">
-                    <img src="assets/kofi_s_logo_nolabel.png" width="60px" height="60px" style="position:relative;">
+                <button class="kofiButton">
+                    <img src="assets/kofi_s_logo_nolabel.png" width="60px" height="60px" style="position:relative; ">
                     Support us on Kofi
                 </button>
             </a>
