--- a/assets/style.css
+++ b/assets/style.css
@@ -129,14 +129,14 @@
     font-size: 16px;
     font-weight : bold;
     color: #ffffff;
-    background: linear-gradient(to right, #00AAAA, #13c3ff );
+    background: linear-gradient(to right, #13c3ff, #1371ff );
     transition: 0.6s;
 }
 
 
 .kofiButton:hover
 {
-    filter: drop-shadow(0 0 0 0.75rem cyan);
+    filter: drop-shadow(0 0 0.75rem #00AAAA);
     transition: 0.6s;
 }
 
