--- a/assets/style.css
+++ b/assets/style.css
@@ -219,6 +219,18 @@
     margin-bottom: 20px;
 }
 
+.repo-button:hover
+{
+    filter: drop-shadow(0 0 0.75rem #00AAAA) !important;
+    transition: 0.3s !important;
+}
+
+.demo-button:hover
+{
+    filter: drop-shadow(0 0 0.75rem crimson) !important;
+    transition: 0.3s !important;
+}
+
 
 body
 {
